@@ -54,6 +54,15 @@ safe do
   #   path ":kind/:id" # this is the default
   # end
 
+  ## uncomment to enable uploads via SCP
+  # scp do
+  #   host "YOUR_REMOTE_HOSTNAME"
+  #   user "YOUR_REMOTE_USERNAME"
+  #   # port "NON STANDARD SSH PORT"
+  #   password "YOUR_REMOTE_PASSWORD"
+  #   path ":kind/:id" # this is the default
+  # end
+
   ## uncomment to enable uploads via FTP
   # ftp do
   #   host "YOUR_REMOTE_HOSTNAME"
