@@ -22,6 +22,7 @@ Gem::Specification.new do |spec|
 
   spec.add_dependency 'aws-s3'
   spec.add_dependency 'cloudfiles'
+  spec.add_dependency 'net-scp'
   spec.add_dependency 'net-sftp'
 
   spec.metadata['rubygems_mfa_required'] = 'true'
